# btc-reward

./: README.md  manage.py  pyproject.toml  requirements.txt
apps/common/: admin.py  auth_backends.py  context_processors.py
apps/common/adapters/: btc_price_oracle.py  payment_processor.py  providers.py
apps/merchants/: admin.py  models.py
apps/merchants/api/: serializers.py  urls.py  views.py
apps/merchants/migrations/: 0001_initial.py  0002_customer_ix_customer_email_merchant_ix_merchant_name_and_more.py
apps/receipts/: admin.py  models.py
apps/receipts/api/: serializers.py  urls.py  views.py
apps/receipts/migrations/: 0001_initial.py  (+1 more)
apps/rewards/: admin.py  models.py
apps/rewards/api/: policy_urls.py  (+3 more)
apps/transactions/: admin.py  models.py
apps/treasury/: admin.py  models.py
apps/ui/: urls.py  views.py
config/settings/: __init__.py  base.py  development.py  test.py
static/css/: admin-dashboard.css  ui.css
static/js/: admin-demo.js
templates/: admin_demo.html  base.html  home.html  home_summary.html  merchant_detail.html  merchant_policies.html  merchant_section.html  merchant_transactions.html  merchant_treasury.html  merchants.html  receipt.html
templates/admin/: index.html
templates/demo/: _dashboard_state.html  dashboard.html  receipt.html
tests/: conftest.py  test_admin_hardening.py  test_api_core.py  test_api_extended.py  test_db_constraints.py  test_foreign_keys.py  test_poc_demo_math.py  test_reward.py  test_security_hardening.py  test_seed.py  test_settings.py  test_transactions_api.py  test_treasury.py  test_ui_pages.py
(+21 files in other folders)
