[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-loyalty"
version = "0.1.0"
description = "Python migration for merchant-funded BTC loyalty infrastructure"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "gunicorn>=22.0,<23.0",
  "whitenoise>=6.8,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-django>=4.9,<5.0",
  "ruff>=0.15,<0.16"
]

[project.scripts]
btc-loyalty-manage = "manage:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
py-modules = ["manage"]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
